--- a/HTML/index.html
+++ b/HTML/index.html
@@ -28,9 +28,9 @@
         <button data-number>8</button>
         <button data-number>9</button>
         <button data-operation>-</button>
-        <button data-number>.</button>
+        <button id="br1" data-number>.</button>
         <button data-number>0</button>
-        <button data-equals class="span-two">=</button>
+        <button data-equals id="br2" class="span-two">=</button>
     </div>
 </body>
 </html>
