--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator Tool</title>
-    <link href="/CSS/style.css" rel="stylesheet">
-    <script src="/JS/script.js" defer></script>
+    <link href="./CSS/style.css" rel="stylesheet">
+    <script src="./JS/script.js" defer></script>
 </head>
 <body>
     <div class="calculator-grid">
